--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -8,7 +8,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.myfaces.core</groupId>
   <artifactId>myfaces-impl</artifactId>
-  <name>Impl</name>
+  <name>Apache MyFaces JSF-1.2 Core Impl</name>
   <description>MyFaces Implementation - JSR 252 ( http://www.jcp.org/en/jsr/detail?id=252 )</description>
   <url>http://myfaces.apache.org/core12/myfaces-impl</url>
   <scm>
@@ -28,6 +28,7 @@
     <plugins>
       <plugin>
         <artifactId>maven-source-plugin</artifactId>
+        <version>2.0.4</version>
         <executions>
           <execution>
             <id>attach-source</id>
@@ -39,6 +40,7 @@
         </plugin>
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.3.1</version>
         <configuration>
           <excludes>
             <exclude>**/JspStateManagerImplTest*</exclude>
@@ -57,6 +59,7 @@
           -->
         <groupId>org.apache.myfaces.trinidadbuild</groupId>
         <artifactId>maven-faces-plugin</artifactId>
+        <version>1.2.5</version>
         <configuration>
           <taglibs>
             <h>http://java.sun.com/jsf/html</h>
@@ -88,6 +91,7 @@
           -->
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>dependency-maven-plugin</artifactId>
+        <version>1.0</version>
         <executions>
           <execution>
             <id>unpack-shared-impl</id>
@@ -175,6 +179,7 @@
         <plugins>
           <plugin>
             <artifactId>maven-javadoc-plugin</artifactId>
+            <version>2.3</version>
             <executions>
               <execution>
                 <id>attach-javadoc</id>
@@ -203,6 +208,7 @@
           </plugin>
           <plugin>
             <artifactId>maven-source-plugin</artifactId>
+            <version>2.0.4</version>
             <executions>
               <execution>
                 <id>attach-source</id>
@@ -220,12 +226,13 @@
     <dependency>
       <groupId>org.apache.myfaces.core</groupId>
       <artifactId>myfaces-api</artifactId>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
-       <groupId>org.apache.myfaces.core</groupId>
-       <artifactId>myfaces-build</artifactId>
-       <version>1.2.1-SNAPSHOT</version>
-       <scope>provided</scope>
+      <groupId>org.apache.myfaces.core</groupId>
+      <artifactId>myfaces-build</artifactId>
+      <version>${project.version}</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <!-- this dependency will be packed together with the main artifact of this pom -->
@@ -237,26 +244,31 @@
     <dependency>
       <groupId>jstl</groupId>
       <artifactId>jstl</artifactId>
+      <!-- version defined in parent -->
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
+      <version>2.5</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>javax.servlet.jsp</groupId>
       <artifactId>jsp-api</artifactId>
+      <version>2.1</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>portlet-api</groupId>
       <artifactId>portlet-api</artifactId>
+      <!-- version defined in parent -->
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.geronimo.specs</groupId>
       <artifactId>geronimo-annotation_1.0_spec</artifactId>
+      <!-- version defined in parent -->
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -274,10 +286,12 @@
     <dependency>
       <groupId>commons-collections</groupId>
       <artifactId>commons-collections</artifactId>
+      <version>3.2</version>
     </dependency>
     <dependency>
       <groupId>commons-logging</groupId>
       <artifactId>commons-logging</artifactId>
+      <version>1.1.1</version>
     </dependency>
     <dependency>
       <groupId>commons-discovery</groupId>
@@ -287,52 +301,69 @@
     <dependency>
       <groupId>commons-codec</groupId>
       <artifactId>commons-codec</artifactId>
+      <version>1.3</version>
     </dependency>
     <dependency>
-       <groupId>org.apache.tomcat</groupId>
-       <artifactId>catalina</artifactId>
-       <version>6.0.10</version>
-       <scope>provided</scope>
+      <groupId>commons-beanutils</groupId>
+      <artifactId>commons-beanutils</artifactId>
+      <version>1.7.0</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-digester</groupId>
+      <artifactId>commons-digester</artifactId>
+      <version>1.8</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.tomcat</groupId>
+      <artifactId>catalina</artifactId>
+      <version>6.0.10</version>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
       <classifier>jdk15</classifier>
+      <version>5.1</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.myfaces.core</groupId>
       <artifactId>myfaces-api</artifactId>
       <classifier>tests</classifier>
+      <version>${project.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.shale</groupId>
       <artifactId>shale-test</artifactId>
+      <version>1.0.4</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>cactus</groupId>
       <artifactId>cactus</artifactId>
+      <version>13-1.7.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.easymock</groupId>
       <artifactId>easymock</artifactId>
+      <version>2.3</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.easymock</groupId>
       <artifactId>easymockclassextension</artifactId>
+      <version>2.3</version>
       <scope>test</scope>
     </dependency>
-	<dependency>
-		<groupId>com.google.code.guice</groupId>
-		<artifactId>guice</artifactId>
-		<version>1.0</version>
-		<scope>provided</scope>
-	</dependency>    
+    <dependency>
+      <groupId>com.google.code.guice</groupId>
+      <artifactId>guice</artifactId>
+      <version>1.0</version>
+      <scope>provided</scope>
+    </dependency>    
   </dependencies>
   <reporting>
     <plugins>
@@ -362,15 +393,49 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>jxr-maven-plugin</artifactId>
+        <version>2.0-beta-1</version>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>surefire-report-maven-plugin</artifactId>
+        <version>2.0-beta-1</version>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>taglist-maven-plugin</artifactId>
         <version>2.1</version>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>cobertura-maven-plugin</artifactId>
+        <version>2.2</version>
+      </plugin>
+      <!-- override PMD settings to set targetJdk -->
+      <plugin>
+        <artifactId>maven-pmd-plugin</artifactId>
+        <version>2.2</version>
+        <configuration>
+          <rulesets>
+            <ruleset>/rulesets/basic.xml</ruleset>
+            <ruleset>/rulesets/unusedcode.xml</ruleset>
+          </rulesets>
+          <linkXref>true</linkXref>
+          <minimumTokens>100</minimumTokens>
+          <targetJdk>1.5</targetJdk>
+          <excludes>
+            <!-- these class make the PMD plugin crash (NullPointerException). -->
+            <exclude>org/apache/myfaces/el/convert/PropertyResolverToELResolver.java</exclude>
+            <exclude>org/apache/myfaces/el/PropertyResolverImpl.java</exclude>
+          </excludes>
+        </configuration>
+        <reportSets>
+          <reportSet>
+            <reports>
+              <report>pmd</report>
+              <report>cpd</report>
+            </reports>
+          </reportSet>
+        </reportSets>
       </plugin>
     </plugins>
   </reporting>
