--- a/api/pom.xml
+++ b/api/pom.xml
@@ -9,7 +9,7 @@
   <artifactId>myfaces-api</artifactId>
   <name>Apache Myfaces JSF Core-1.2 API</name>
   <description>
-    MyFaces API - JSR 252 ( http://www.jcp.org/en/jsr/detail?id=252 )
+    The public API classes of the Apache MyFaces CORE JSF-1.2 project
   </description>
   <url>http://myfaces.apache.org/core12/myfaces-api</url>
   <scm>
@@ -88,18 +88,6 @@
             <executions>
               <execution>
                 <id>attach-javadoc</id>
-                <goals>
-                  <goal>jar</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
-          <plugin>
-            <artifactId>maven-source-plugin</artifactId>
-            <version>2.0.4</version>
-            <executions>
-              <execution>
-                <id>attach-source</id>
                 <goals>
                   <goal>jar</goal>
                 </goals>
