--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <parent>
       <groupId>org.apache.myfaces</groupId>
       <artifactId>myfaces</artifactId>
-      <version>3</version>
+      <version>5-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.myfaces.core</groupId>
@@ -15,19 +15,35 @@
   </description>
   <version>1.1.6-SNAPSHOT</version>
   <url>http://myfaces.apache.org/core11</url>
+
   <issueManagement>
     <system>jira</system>
     <url>http://issues.apache.org/jira/secure/BrowseProject.jspa?id=10600</url>
   </issueManagement>
+
   <scm>
     <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/trunk</connection>
     <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/trunk</developerConnection>
     <url>http://svn.apache.org/viewvc/myfaces/core/trunk</url>
   </scm>
+
   <modules>
     <module>api</module>
     <module>impl</module>
   </modules>
+
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.0.2</version>
+        <configuration>
+          <source>1.3</source>
+          <target>1.3</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 
     <distributionManagement>
       <site>
