--- a/api/pom.xml
+++ b/api/pom.xml
@@ -9,13 +9,31 @@
   <artifactId>myfaces-api</artifactId>
   <name>Apache MyFaces JSF-1.1 API</name>
   <description>
-    The public API classes of the Apache MyFaces Core JSF-1.1 API project.
+    The public API classes of the Apache MyFaces Core JSF-1.1 project.
   </description>
   <scm>
     <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/trunk/api</connection>
     <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/trunk/api</developerConnection>
     <url>http://svn.apache.org/viewcvs.cgi/myfaces/core/trunk/api</url>
   </scm>
+
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-source-plugin</artifactId>
+        <version>2.0.4</version>
+        <executions>
+          <execution>
+            <id>attach-source</id>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
+
   <profiles>
     <profile>
       <id>generate-assembly</id>
@@ -29,20 +47,10 @@
         <plugins>
           <plugin>
             <artifactId>maven-javadoc-plugin</artifactId>
+            <version>2.3</version>
             <executions>
               <execution>
                 <id>attach-javadoc</id>
-                <goals>
-                  <goal>jar</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
-          <plugin>
-            <artifactId>maven-source-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>attach-source</id>
                 <goals>
                   <goal>jar</goal>
                 </goals>
@@ -106,12 +114,6 @@
   </profiles>
   <dependencies>
     <dependency>
-      <groupId>commons-lang</groupId>
-      <artifactId>commons-lang</artifactId>
-      <version>2.1</version>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
       <groupId>easymock</groupId>
       <artifactId>easymockclassextension</artifactId>
       <version>1.1</version>
@@ -128,12 +130,6 @@
       <artifactId>jsp-api</artifactId>
       <version>2.0</version>
       <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>commons-beanutils</groupId>
-      <artifactId>commons-beanutils</artifactId>
-      <version>1.7.0</version>
-      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.struts.shale</groupId>
@@ -164,18 +160,6 @@
       <artifactId>easymock</artifactId>
       <version>1.1</version>
       <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>commons-digester</groupId>
-      <artifactId>commons-digester</artifactId>
-      <version>1.8</version>
-      <scope>compile</scope>
-      <exclusions>
-        <exclusion>
-          <artifactId>xml-apis</artifactId>
-          <groupId>xml-apis</groupId>
-        </exclusion>
-      </exclusions>
     </dependency>
     <dependency>
       <groupId>aspectj</groupId>
