--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -28,6 +28,19 @@
     </resources>
     <plugins>
       <plugin>
+        <artifactId>maven-source-plugin</artifactId>
+        <version>2.0.4</version>
+        <executions>
+          <execution>
+            <id>attach-source</id>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+ 
+      <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>xslt-maven-plugin</artifactId>
         <version>1.0</version>
@@ -46,8 +59,14 @@
         </configuration>
       </plugin>
       <plugin>
+        <!--
+          - The shared-impl project generates a modified version of the "shared" module
+          - source and classes. The result is a jar full of files in the "shared_impl"
+          - package that we can merge into the jar for this project.
+          -->
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>dependency-maven-plugin</artifactId>
+        <version>1.0</version>
         <executions>
           <execution>
             <id>unpack-shared-impl</id>
@@ -87,25 +106,29 @@
           </execution>
         </executions>
       </plugin>
-      <!-- the following will add the unpacked shared sources directory as source directory into the pom,
-           so also the shared sources are automaticaly included by the attach source plugin -->  
       <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>build-helper-maven-plugin</artifactId>
-            <executions>
-                <execution>
-                    <id>add-source</id>
-                    <phase>process-sources</phase>
-                    <goals>
-                        <goal>add-source</goal>
-                    </goals>
-                    <configuration>
-                        <sources>
-                            <source>${project.build.directory}/shared_sources</source>
-                        </sources>
-                    </configuration>
-                </execution>
-            </executions>
+        <!-- 
+          - Add the unpacked shared sources directory as source directory into the pom datastructure,
+          - so that the -source jar includes them too; every .class file in the jar should have its
+          - source in the -source jar.
+          -->  
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+        <version>1.0</version>
+        <executions>
+          <execution>
+            <id>add-source</id>
+            <phase>process-sources</phase>
+            <goals>
+              <goal>add-source</goal>
+            </goals>
+            <configuration>
+              <sources>
+                <source>${project.build.directory}/shared_sources</source>
+              </sources>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
@@ -169,6 +192,13 @@
     </profile>
 
     <profile>
+      <!--
+        - Whenever files are deployed to a snapshot or release repository,
+        -   mvn -Pgenerate-assembly deploy
+        - should be used. This will create additional artifacts that are
+        - useful but too time-consuming to create when just doing a local
+        - "mvn install" operation.
+        -->
       <id>generate-assembly</id>
       <activation>
         <property>
@@ -211,6 +241,7 @@
           </plugin>
           <plugin>
             <artifactId>maven-javadoc-plugin</artifactId>
+            <version>2.3</version>
             <executions>
               <execution>
                 <id>attach-javadoc</id>
@@ -223,6 +254,7 @@
           <plugin>
             <groupId>net.sourceforge.maven-taglib</groupId>
             <artifactId>maven-taglib-plugin</artifactId>
+            <version>2.3.1</version>
             <executions>
               <execution>
                 <id>attach-tlddoc</id>
@@ -235,17 +267,6 @@
               <taglib.src.dir>${basedir}/target/tlddoc-site</taglib.src.dir>
               <tldDocDir>${basedir}/target/tlddoc</tldDocDir>
             </configuration>
-          </plugin>
-          <plugin>
-            <artifactId>maven-source-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>attach-source</id>
-                <goals>
-                  <goal>jar</goal>
-                </goals>
-              </execution>
-            </executions>
           </plugin>
         </plugins>
       </build>
@@ -261,13 +282,19 @@
     <dependency>
       <groupId>org.apache.myfaces.core</groupId>
       <artifactId>myfaces-api</artifactId>
-      <version>${version}</version>
+      <version>${project.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>commons-el</groupId>
       <artifactId>commons-el</artifactId>
       <version>1.0</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+      <version>2.1</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
@@ -307,9 +334,9 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>commons-codec</groupId>
-      <artifactId>commons-codec</artifactId>
-      <version>1.3</version>
+      <groupId>commons-digester</groupId>
+      <artifactId>commons-digester</artifactId>
+      <version>1.8</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
