updated used plugins...
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk_1.2.x@612182 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -61,7 +61,7 @@
           -->
         <groupId>org.apache.myfaces.trinidadbuild</groupId>
         <artifactId>maven-faces-plugin</artifactId>
-        <version>1.2.5</version>
+        <version>1.2.6-SNAPSHOT</version>
         <configuration>
           <taglibs>
             <h>http://java.sun.com/jsf/html</h>
