--- a/api/pom.xml
+++ b/api/pom.xml
@@ -45,7 +45,7 @@
       <plugin>
         <groupId>org.apache.myfaces.trinidadbuild</groupId>
         <artifactId>maven-faces-plugin</artifactId>
-        <version>1.2.5</version>
+        <version>1.2.6-SNAPSHOT</version>
         <configuration>
           <typePrefix>javax.faces</typePrefix>
           <packageContains>javax.faces</packageContains>
