--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
-      <groupId>org.apache.myfaces</groupId>
-      <artifactId>myfaces</artifactId>
-      <version>5-SNAPSHOT</version>
+    <groupId>org.apache.myfaces</groupId>
+    <artifactId>myfaces</artifactId>
+    <version>5</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.myfaces.core</groupId>
@@ -45,11 +45,11 @@
     </plugins>
   </build>
 
-    <distributionManagement>
-      <site>
-        <id>apache-site</id>
-        <name>Apache Website</name>
-        <url>scpexe://minotaur.apache.org/www/myfaces.apache.org/core11/</url>
-      </site>
-    </distributionManagement>
+  <distributionManagement>
+    <site>
+      <id>apache-site</id>
+      <name>Apache Website</name>
+      <url>scpexe://minotaur.apache.org/www/myfaces.apache.org/core11/</url>
+    </site>
+  </distributionManagement>
 </project>
