enabling myfaces-html.tld (instead of h.tld)
things done:
-updated pom section of the "faces-plugin" to have myfaces-html, instead of h
-added almost empty myfaces-html-base.tld, where other folks can add informations, if desired.

git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk_1.2.x@613735 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -64,7 +64,7 @@
         <version>1.2.6-SNAPSHOT</version>
         <configuration>
           <taglibs>
-            <h>http://java.sun.com/jsf/html</h>
+            <myfaces-html>http://java.sun.com/jsf/html</myfaces-html>
           </taglibs>
           <targetPath>META-INF/standard-faces-config.xml</targetPath>
           <packageContains>org.apache</packageContains>
