updated MyFaces trunk to use the "new" build-tools' based faces plugin. -removed redundant versions as well...
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk_1.2.x@613743 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -59,9 +59,8 @@
           - Or because people just haven't got around to defining the metadata and
           - templates for it in the build module?
           -->
-        <groupId>org.apache.myfaces.trinidadbuild</groupId>
-        <artifactId>maven-faces-plugin</artifactId>
-        <version>1.2.6-SNAPSHOT</version>
+        <groupId>org.apache.myfaces.buildtools</groupId>
+        <artifactId>myfaces-faces-plugin</artifactId>
         <configuration>
           <taglibs>
             <myfaces-html>http://java.sun.com/jsf/html</myfaces-html>
