--- a/api/pom.xml
+++ b/api/pom.xml
@@ -43,9 +43,8 @@
          </executions>
         </plugin>
       <plugin>
-        <groupId>org.apache.myfaces.trinidadbuild</groupId>
-        <artifactId>maven-faces-plugin</artifactId>
-        <version>1.2.6-SNAPSHOT</version>
+        <groupId>org.apache.myfaces.buildtools</groupId>
+        <artifactId>myfaces-faces-plugin</artifactId>
         <configuration>
           <typePrefix>javax.faces</typePrefix>
           <packageContains>javax.faces</packageContains>
