--- a/pom.xml
+++ b/pom.xml
@@ -64,9 +64,9 @@
     <pluginManagement>
       <plugins>
         <plugin>
-          <groupId>org.apache.myfaces.trinidadbuild</groupId>
-          <artifactId>maven-faces-plugin</artifactId>
-          <version>1.2.6-SNAPSHOT</version>
+          <groupId>org.apache.myfaces.buildtools</groupId>
+          <artifactId>myfaces-faces-plugin</artifactId>
+          <version>1.0.0-SNAPSHOT</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
