Rollback to trinidad plugins 1.2.6 for release procedure
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk_1.2.x@613952 13f79535-47bb-0310-9956-ffa450edef68

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -43,8 +43,12 @@
          </executions>
         </plugin>
       <plugin>
+	<!--
         <groupId>org.apache.myfaces.buildtools</groupId>
         <artifactId>myfaces-faces-plugin</artifactId>
+	-->
+        <groupId>org.apache.myfaces.trinidadbuild</groupId>
+	<artifactId>maven-faces-plugin</artifactId>
         <configuration>
           <typePrefix>javax.faces</typePrefix>
           <packageContains>javax.faces</packageContains>
