--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -455,6 +455,6 @@
   </repositories>
 
   <properties>
-    <myfaces-shared.version>3.0.1-SNAPSHOT</myfaces-shared.version>
+    <myfaces-shared.version>3.0.2</myfaces-shared.version>
   </properties>
 </project>
