--- a/pom.xml
+++ b/pom.xml
@@ -14,16 +14,16 @@
     This project is the home of the MyFaces implementation of the JavaServer Faces 1.2 specification, and
     consists of an API module (javax.faces.* classes) and an implementation module (org.apache.myfaces.* classes).
   </description>
-  <version>1.2.1-SNAPSHOT</version>
+  <version>1.2.2</version>
   <url>http://myfaces.apache.org/core12</url>
   <issueManagement>
     <system>jira</system>
     <url>http://issues.apache.org/jira/secure/BrowseProject.jspa?id=10600</url>
   </issueManagement>
   <scm>
-    <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/trunk_1.2.x</connection>
-    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/trunk_1.2.x</developerConnection>
-    <url>http://svn.apache.org/repos/asf/myfaces/core/trunk_1.2.x</url>
+    <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/branches/1_2_2</connection>
+    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/branches/1_2_2</developerConnection>
+    <url>http://svn.apache.org/repos/asf/myfaces/core/branches/1_2_2</url>
   </scm>
   <modules>
     <module>build</module>
@@ -102,7 +102,7 @@
         <artifactId>maven-pmd-plugin</artifactId>
         <version>2.2</version>
         <reportSets>
-          <reportSet/>
+          <reportSet />
         </reportSets>
       </plugin>
     </plugins>
