--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
         <plugin>
           <groupId>org.apache.myfaces.buildtools</groupId>
           <artifactId>myfaces-faces-plugin</artifactId>
-          <version>1.0.0-SNAPSHOT</version>
+          <version>1.0.0</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
