--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -451,6 +451,6 @@
   </repositories>
 
   <properties>
-    <myfaces-shared.version>3.0.3-SNAPSHOT</myfaces-shared.version>
+    <myfaces-shared.version>3.0.3</myfaces-shared.version>
   </properties>
 </project>
