Fix obsolete deployment url.
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk@660039 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
     <site>
       <id>apache-site</id>
       <name>Apache Website</name>
-      <url>scpexe://minotaur.apache.org/www/myfaces.apache.org/core11/</url>
+      <url>scpexe://people.apache.org/www/myfaces.apache.org/core11/</url>
     </site>
   </distributionManagement>
 </project>
