Fix obsolete deployment url
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk_1.2.x@660040 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -149,7 +149,7 @@
       <site>
         <id>apache-site</id>
         <name>Apache Website</name>
-        <url>scpexe://minotaur.apache.org/www/myfaces.apache.org/core12/</url>
+        <url>scpexe://people.apache.org/www/myfaces.apache.org/core12/</url>
       </site>
     </distributionManagement>
 </project>
