--- a/api/pom.xml
+++ b/api/pom.xml
@@ -21,7 +21,7 @@
     <plugins>
       <plugin>
         <artifactId>maven-jar-plugin</artifactId>
-        <version>2.1</version>
+        <version>2.2</version>
         <executions>
           <execution>
             <goals>
@@ -106,7 +106,7 @@
         <plugins>
           <plugin>
             <artifactId>maven-javadoc-plugin</artifactId>
-            <version>2.3</version>
+            <version>2.4</version>
             <executions>
               <execution>
                 <id>attach-javadoc</id>
@@ -249,12 +249,11 @@
     <plugins>
       <plugin>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.3</version>
+        <version>2.4</version>
       </plugin>
       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>changelog-maven-plugin</artifactId>
-        <version>2.0-beta-1</version>
+        <artifactId>maven-changelog-plugin</artifactId>
+        <version>2.1</version>
         <reportSets>
           <reportSet>
             <id>dual-report</id>
@@ -271,14 +270,12 @@
         </reportSets>
       </plugin>
       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>jxr-maven-plugin</artifactId>
-        <version>2.0-beta-1</version>
+        <artifactId>maven-jxr-plugin</artifactId>
+        <version>2.1</version>
       </plugin>
       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>surefire-report-maven-plugin</artifactId>
-        <version>2.0-beta-1</version>
+        <artifactId>maven-surefire-report-plugin</artifactId>
+        <version>2.4.3</version>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
@@ -293,7 +290,7 @@
       <!-- override PMD settings to set targetJdk -->
       <plugin>
         <artifactId>maven-pmd-plugin</artifactId>
-        <version>2.2</version>
+        <version>2.4</version>
         <configuration>
           <rulesets>
             <ruleset>/rulesets/basic.xml</ruleset>
