update myfaces-builder-plugin version to 1.0.1
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk_1.2.x@681657 13f79535-47bb-0310-9956-ffa450edef68

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -74,7 +74,7 @@
       <plugin>
         <groupId>org.apache.myfaces.buildtools</groupId>
         <artifactId>myfaces-builder-plugin</artifactId>
-        <version>1.0.1-SNAPSHOT</version>
+        <version>1.0.1</version>
         <executions>
           <execution>
             <goals>
