--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     This project is the home of the MyFaces implementation of the JavaServer Faces 1.1 specification, and
     consists of an API module (javax.faces.* classes) and an implementation module (org.apache.myfaces.* classes).
   </description>
-  <version>1.1.6-rc1-SNAPSHOT</version>
+  <version>1.1.6-SNAPSHOT</version>
   <url>http://myfaces.apache.org/core11</url>
 
   <issueManagement>
@@ -24,9 +24,9 @@
   </issueManagement>
 
   <scm>
-    <connection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/branches/1_1_6rc1</connection>
-    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/branches/1_1_6rc1</developerConnection>
-    <url>https://svn.apache.org/repos/asf/myfaces/core/branches/1_1_6rc1</url>
+    <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/trunk</connection>
+    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/trunk</developerConnection>
+    <url>http://svn.apache.org/viewvc/myfaces/core/trunk</url>
   </scm>
 
   <modules>
