--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,7 @@
         <executions>
           <execution>
             <id>verify-style</id>
-            <phase>process-sources</phase>
+            <phase>verify</phase>
             <goals><goal>check</goal></goals>
           </execution>
         </executions>
