--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project
+  xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
   <parent>
     <groupId>org.apache.myfaces</groupId>
     <artifactId>myfaces</artifactId>
     <version>6</version>
   </parent>
+
   <modelVersion>4.0.0</modelVersion>
+
   <groupId>org.apache.myfaces.core</groupId>
   <artifactId>myfaces-core-project</artifactId>
   <packaging>pom</packaging>
@@ -60,7 +66,31 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <!--
+          - Make a checkstyle violation a compile error. Note that if a compile error occurs,
+          - further information can be found in target/site/checkstyle.html (present even when
+          - just the compile goal and not the site goal has been run). Note also that child
+          - projects may redeclare this plugin and provide different configuration settings
+          - to use different checks (more or less strict than the default).
+          -->
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-checkstyle-plugin</artifactId>
+        <version>2.2</version>
+        <executions>
+          <execution>
+            <id>verify-style</id>
+            <phase>verify</phase>
+            <goals><goal>check</goal></goals>
+          </execution>
+        </executions>
+        <configuration>
+          <configLocation>default/myfaces-checks-minimal.xml</configLocation>
+          <headerLocation>default/myfaces-header.txt</headerLocation>
+        </configuration>
+      </plugin>
     </plugins>
+
     <pluginManagement>
       <plugins>
         <plugin>
