--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -97,7 +97,7 @@
 		            <artifactItem>
                   <groupId>org.apache.myfaces.shared</groupId>
                   <artifactId>myfaces-shared-impl</artifactId>
-                  <version>2.0.7-SNAPSHOT</version>
+                  <version>2.0.8</version>
 		              <classifier>sources</classifier>
                 </artifactItem>
                </artifactItems>
