--- a/api/pom.xml
+++ b/api/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <artifactId>myfaces-core-project</artifactId>
     <groupId>org.apache.myfaces.core</groupId>
-    <version>1.1.6-SNAPSHOT</version>
+    <version>1.1.6</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.myfaces.core</groupId>
@@ -12,9 +12,9 @@
     The public API classes of the Apache MyFaces Core JSF-1.1 project.
   </description>
   <scm>
-    <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/trunk/api</connection>
-    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/trunk/api</developerConnection>
-    <url>http://svn.apache.org/viewcvs.cgi/myfaces/core/trunk/api</url>
+    <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/tags/1_1_6/api</connection>
+    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/tags/1_1_6/api</developerConnection>
+    <url>http://svn.apache.org/viewcvs.cgi/myfaces/core/tags/1_1_6/api</url>
   </scm>
 
   <build>
