--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -319,8 +319,9 @@
     <dependency>
       <groupId>org.apache.tomcat</groupId>
       <artifactId>catalina</artifactId>
-      <version>6.0.10</version>
+      <version>6.0.13</version>
       <scope>provided</scope>
+      <optional>true</optional>
     </dependency>
 
     <dependency>
