update shared version to 1.2.4
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/branches/1_2_4prepare@689317 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -452,6 +452,6 @@
   </repositories>
 
   <properties>
-    <myfaces-shared.version>3.0.4-SNAPSHOT</myfaces-shared.version>
+    <myfaces-shared.version>3.0.4</myfaces-shared.version>
   </properties>
 </project>
