--- a/api/pom.xml
+++ b/api/pom.xml
@@ -74,7 +74,7 @@
       <plugin>
         <groupId>org.apache.myfaces.buildtools</groupId>
         <artifactId>myfaces-builder-plugin</artifactId>
-        <version>1.0.1</version>
+        <version>1.0.2-SNAPSHOT</version>
         <executions>
           <execution>
             <goals>
@@ -198,7 +198,7 @@
     <dependency>
       <groupId>org.apache.myfaces.buildtools</groupId>
       <artifactId>myfaces-builder-annotations</artifactId> 
-      <version>1.0.1</version>
+      <version>1.0.2-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
