--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
     <url>http://svn.apache.org/repos/asf/myfaces/core/trunk_1.2.x</url>
   </scm>
   <modules>
-    <module>build</module>
+    <!-- module>build</module -->
     <module>api</module>
     <module>impl</module>
   </modules>
